--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 LEC_Results/
 
 # Inputs
-inputs/fvars
-inputs/box_lims
-inputs/track
-inputs/fvars
+/inputs/fvars
+/inputs/box_lims
+/inputs/track
+/inputs/fvars
 
 # Mac stuff
 .DS_Store
