--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-cartopy==0.20.3
-celluloid==0.2.0
-cmocean==2.0
-matplotlib==3.5.2
-metpy==1.3.1
-numpy==1.23.1
-pandas==1.4.3
-Shapely==1.8.2
-xarray==2022.3.0
-
+Cartopy==0.21.1
+cmocean==3.0.3
+matplotlib==3.7.1
+MetPy==1.4.1
+numpy==1.24.3
+pandas==1.5.3
+scipy==1.10.1
+Shapely==2.0.1
+xarray==2022.11.0
