--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# from automating tasks
+src/nohup.out
+
+# from vscode
+src/.vscode/launch.json
