--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,42 @@
-Cartopy==0.21.1
+Cartopy==0.22.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
 cmocean==3.0.3
-matplotlib==3.7.1
-MetPy==1.4.1
-numpy==1.24.3
-pandas==1.5.3
-scipy==1.10.1
-Shapely==2.0.1
-xarray==2022.11.0
-dask==2023.3.2
+contourpy==1.2.0
+cycler==0.12.1
+dask==2024.1.0
+fonttools==4.47.2
+fsspec==2023.12.2
+idna==3.6
+importlib-metadata==7.0.1
+kiwisolver==1.4.5
+locket==1.0.0
+matplotlib==3.8.2
+MetPy==1.6.1
+numpy==1.26.3
+packaging==23.2
+pandas==2.1.4
+partd==1.4.1
+pillow==10.2.0
+Pint==0.23
+platformdirs==4.1.0
+pooch==1.8.0
+pyparsing==3.1.1
+pyproj==3.6.1
+pyshp==2.3.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+scipy==1.11.4
+shapely==2.0.2
+six==1.16.0
+toolz==0.12.0
+traitlets==5.14.1
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
+xarray==2023.12.0
+zipp==3.17.0
