updated to climetlab

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,54 @@
+attrs==23.2.0
+branca==0.7.0
 Cartopy==0.22.0
+cdsapi==0.6.1
 certifi==2023.11.17
+cffi==1.16.0
+cfgrib==0.9.10.4
+cftime==1.6.3
 charset-normalizer==3.3.2
 click==8.1.7
+climetlab==0.19.2
 cloudpickle==3.0.0
 cmocean==3.0.3
 contourpy==1.2.0
 cycler==0.12.1
 dask==2024.1.0
+eccodes==1.6.1
+ecmwf-api-client==1.6.3
+ecmwf-opendata==0.2.0
+ecmwflibs==0.5.5
+entrypoints==0.4
+filelock==3.13.1
+findlibs==0.0.5
 fonttools==4.47.2
 fsspec==2023.12.2
 idna==3.6
+imageio==2.33.1
 importlib-metadata==7.0.1
+Jinja2==3.1.3
 kiwisolver==1.4.5
 locket==1.0.0
+lru-dict==1.3.0
+Magics==1.5.8
+Markdown==3.5.2
+MarkupSafe==2.1.3
 matplotlib==3.8.2
 MetPy==1.6.1
+multiurl==0.2.3.2
+netCDF4==1.6.5
+numpngw==0.1.3
 numpy==1.26.3
 packaging==23.2
 pandas==2.1.4
 partd==1.4.1
+pdbufr==0.11.0
 pillow==10.2.0
 Pint==0.23
 platformdirs==4.1.0
 pooch==1.8.0
+pycparser==2.21
+pyodc==1.3.0
 pyparsing==3.1.1
 pyproj==3.6.1
 pyshp==2.3.1
@@ -33,7 +59,9 @@ requests==2.31.0
 scipy==1.11.4
 shapely==2.0.2
 six==1.16.0
+termcolor==2.4.0
 toolz==0.12.0
+tqdm==4.66.1
 traitlets==5.14.1
 typing_extensions==4.9.0
 tzdata==2023.4
