Updated requirements and bug fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ cads-api-client==1.1.0
 Cartopy==0.23.0
 cdsapi==0.7.0
 certifi==2024.7.4
+cffi==1.16.0
+cfgrib==0.9.13.0
+cftime==1.6.4
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
@@ -12,17 +15,23 @@ contourpy==1.2.1
 cycler==0.12.1
 cyclophaser==1.7.3
 dask==2024.7.0
+eccodes==1.7.1
+findlibs==0.0.5
 flexcache==0.3
 flexparser==0.3.1
 fonttools==4.53.1
 fsspec==2024.6.1
+h5netcdf==1.3.0
+h5py==3.11.0
 idna==3.7
+iniconfig==2.0.0
 kiwisolver==1.4.5
 locket==1.0.0
 lorenz-phase-space==1.2.4
 matplotlib==3.9.1
 MetPy==1.6.2
 multiurl==0.3.1
+netCDF4==1.7.1.post1
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
@@ -30,10 +39,13 @@ partd==1.4.2
 pillow==10.4.0
 Pint==0.24.3
 platformdirs==4.2.2
+pluggy==1.5.0
 pooch==1.8.2
+pycparser==2.22
 pyparsing==3.1.2
 pyproj==3.6.1
 pyshp==2.3.1
+pytest==8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
