--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,13 +21,22 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+        pip install autopep8 isort
+
+    - name: Format code with autopep8
+      run: |
+        autopep8 --in-place --aggressive --aggressive --recursive .
+
+    - name: Sort imports with isort
+      run: |
+        isort .
+
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --config .flake8 --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --config .flake8 --count --exit-zero --max-complexity=10 --statistics
 
     - name: Test with pytest
       run: |
