--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 appdirs==1.4.4
 attrs==23.2.0
+autoflake==2.3.1
+autopep8==2.3.1
 cads-api-client==1.1.0
 Cartopy==0.23.0
 cdsapi==0.7.0
@@ -24,7 +26,9 @@ fsspec==2024.6.1
 h5netcdf==1.3.0
 h5py==3.11.0
 idna==3.7
+importlib_metadata==8.0.0
 iniconfig==2.0.0
+isort==5.13.2
 kiwisolver==1.4.5
 locket==1.0.0
 lorenz-phase-space==1.2.4
@@ -41,7 +45,9 @@ Pint==0.24.3
 platformdirs==4.2.2
 pluggy==1.5.0
 pooch==1.8.2
+pycodestyle==2.12.0
 pycparser==2.22
+pyflakes==3.2.0
 pyparsing==3.1.2
 pyproj==3.6.1
 pyshp==2.3.1
@@ -51,7 +57,6 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 scipy==1.14.0
-setuptools==70.3.0
 shapely==2.0.5
 six==1.16.0
 toolz==0.12.1
@@ -61,3 +66,4 @@ typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 xarray==2024.2.0
+zipp==3.19.2
