--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,5 +40,7 @@ jobs:
         flake8 . --config .flake8 --count --exit-zero --max-complexity=10 --statistics
 
     - name: Test with pytest
+      env:
+        PYTHONPATH: ${{ github.workspace }}
       run: |
         pytest
