explicitly set the PYTHONPATH within the pytest command

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,4 +43,4 @@ jobs:
       env:
         PYTHONPATH: ${{ github.workspace }}
       run: |
-        pytest
+        PYTHONPATH=$GITHUB_WORKSPACE pytest
