--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,7 +40,5 @@ jobs:
         flake8 . --config .flake8 --count --exit-zero --max-complexity=10 --statistics
 
     - name: Test with pytest
-      env:
-        PYTHONPATH: ${{ github.workspace }}
       run: |
-        PYTHONPATH=$GITHUB_WORKSPACE pytest
+        PYTHONPATH=$GITHUB_WORKSPACE pytest tests
