Add Sphinx documentation and update README

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+alabaster==0.7.16
 appdirs==1.4.4
 attrs==23.2.0
 autoflake==2.3.1
 autopep8==2.3.1
+Babel==2.15.0
 cads-api-client==1.1.0
 Cartopy==0.23.0
 cdsapi==0.7.0
@@ -17,6 +19,7 @@ contourpy==1.2.1
 cycler==0.12.1
 cyclophaser==1.7.3
 dask==2024.7.0
+docutils==0.21.2
 eccodes==1.7.1
 findlibs==0.0.5
 flake8==7.1.0
@@ -27,12 +30,15 @@ fsspec==2024.6.1
 h5netcdf==1.3.0
 h5py==3.11.0
 idna==3.7
+imagesize==1.4.1
 importlib_metadata==8.0.0
 iniconfig==2.0.0
 isort==5.13.2
+Jinja2==3.1.4
 kiwisolver==1.4.5
 locket==1.0.0
 lorenz-phase-space==1.2.4
+MarkupSafe==2.1.5
 matplotlib==3.9.1
 mccabe==0.7.0
 MetPy==1.6.2
@@ -50,6 +56,7 @@ pooch==1.8.2
 pycodestyle==2.12.0
 pycparser==2.22
 pyflakes==3.2.0
+Pygments==2.18.0
 pyparsing==3.1.2
 pyproj==3.6.1
 pyshp==2.3.1
@@ -59,13 +66,23 @@ pytz==2024.1
 PyYAML==6.0.1
 requests==2.32.3
 scipy==1.14.0
+setuptools==69.5.1
 shapely==2.0.5
 six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.4.4
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
 toolz==0.12.1
 tqdm==4.66.4
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+wheel==0.43.0
 xarray==2024.2.0
 zipp==3.19.2
