Add SSH key fingerprints to CircleCI jobs for secure access

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:aGL+bUhBKoZZJG0gu0EHwgWf0GC09iug8beV1nW4XmU"
       - checkout
 
       - run:
@@ -54,6 +57,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:aGL+bUhBKoZZJG0gu0EHwgWf0GC09iug8beV1nW4XmU"
       - checkout
 
       - run:
@@ -87,6 +93,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:aGL+bUhBKoZZJG0gu0EHwgWf0GC09iug8beV1nW4XmU"
       - checkout
 
       - run:
