Add SSH key fingerprints to all jobs in CircleCI configuration for secure access

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:HmYbwDJ6JLfaT7Oad5vLzshdvLlxFCv+esCcsd+UgQ0"
       - checkout
 
       - run:
@@ -54,6 +57,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:HmYbwDJ6JLfaT7Oad5vLzshdvLlxFCv+esCcsd+UgQ0"
       - checkout
 
       - run:
@@ -87,6 +93,9 @@ jobs:
     docker:
       - image: cimg/python:3.12
     steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "SHA256:HmYbwDJ6JLfaT7Oad5vLzshdvLlxFCv+esCcsd+UgQ0"
       - checkout
 
       - run:
