[skip ci] Update TestPyPI and PyPI upload steps to skip existing files

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,7 @@ jobs:
           name: Publish on TestPyPI
           command: |
             . venv/bin/activate
-            twine upload -u ${TESTPYPI_USERNAME} -p ${TESTPYPI_PASSWORD} --repository testpypi dist/* --verbose
+            twine upload -u ${TESTPYPI_USERNAME} -p ${TESTPYPI_PASSWORD} --repository testpypi dist/* --verbose --skip-existing
 
   pypi_publish:
     docker:
@@ -123,7 +123,7 @@ jobs:
           name: Publish on PyPI
           command: |
             . venv/bin/activate
-            twine upload -u ${PYPI_USERNAME} -p ${PYPI_PASSWORD} dist/* --verbose
+            twine upload -u ${PYPI_USERNAME} -p ${PYPI_PASSWORD} dist/* --verbose --skip-existing
 
 workflows:
   build_test_publish:
