--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,7 @@ shapely==2.0.5
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==7.4.4
+sphinx_rtd_theme==2.0.0
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
