--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,17 @@ jobs:
       - checkout
 
       - run:
+          name: Install build tools (build_test)
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip setuptools wheel build
+
+      - run:
           name: Build (build_test)
-          command: python3 setup.py sdist bdist_wheel
+          command: |
+            . venv/bin/activate
+            python -m build
 
       - run:
           name: Check if wheel file exists (build_test)
@@ -27,7 +36,6 @@ jobs:
       - run:
           name: Install dependencies (build_test)
           command: |
-            python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
 
@@ -63,8 +71,17 @@ jobs:
       - checkout
 
       - run:
+          name: Install build tools (test_pypi_publish)
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip setuptools wheel build
+
+      - run:
           name: Create whl (test_pypi_publish)
-          command: python3 setup.py sdist bdist_wheel
+          command: |
+            . venv/bin/activate
+            python -m build
 
       - run:
           name: Check if wheel file exists (test_pypi_publish)
@@ -73,7 +90,6 @@ jobs:
       - run:
           name: Install dependencies (test_pypi_publish)
           command: |
-            python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
 
@@ -81,7 +97,7 @@ jobs:
           name: Install twine (test_pypi_publish)
           command: |
             . venv/bin/activate
-            pip install twine
+            pip install --upgrade twine
 
       - run:
           name: Publish on TestPyPI
@@ -99,8 +115,17 @@ jobs:
       - checkout
 
       - run:
+          name: Install build tools (pypi_publish)
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install --upgrade pip setuptools wheel build
+
+      - run:
           name: Create whl (pypi_publish)
-          command: python3 setup.py sdist bdist_wheel
+          command: |
+            . venv/bin/activate
+            python -m build
 
       - run:
           name: Check if wheel file exists (pypi_publish)
@@ -109,7 +134,6 @@ jobs:
       - run:
           name: Install dependencies (pypi_publish)
           command: |
-            python -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
 
@@ -117,7 +141,7 @@ jobs:
           name: Install twine (pypi_publish)
           command: |
             . venv/bin/activate
-            pip install twine
+            pip install --upgrade twine
 
       - run:
           name: Publish on PyPI
