--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
-            pip install --upgrade pip 'setuptools>=65.0.0' wheel build
+            pip install --upgrade pip 'setuptools>=69.0.0,<70.0.0' wheel build
 
       - run:
           name: Build (build_test)
@@ -75,7 +75,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
-            pip install --upgrade pip 'setuptools>=65.0.0' wheel build
+            pip install --upgrade pip 'setuptools>=69.0.0,<70.0.0' wheel build
 
       - run:
           name: Create whl (test_pypi_publish)
@@ -97,7 +97,7 @@ jobs:
           name: Install twine (test_pypi_publish)
           command: |
             . venv/bin/activate
-            pip install 'twine>=5.0.0'
+            pip install 'twine>=3.0.0,<4.0.0'
 
       - run:
           name: Publish on TestPyPI
@@ -119,7 +119,7 @@ jobs:
           command: |
             python -m venv venv
             . venv/bin/activate
-            pip install --upgrade pip 'setuptools>=65.0.0' wheel build
+            pip install --upgrade pip 'setuptools>=69.0.0,<70.0.0' wheel build
 
       - run:
           name: Create whl (pypi_publish)
@@ -141,7 +141,7 @@ jobs:
           name: Install twine (pypi_publish)
           command: |
             . venv/bin/activate
-            pip install 'twine>=5.0.0'
+            pip install 'twine>=3.0.0,<4.0.0'
 
       - run:
           name: Publish on PyPI
