--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=69.0.0,<70.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "LorenzCycleToolkit"
+name = "lorenzcycletoolkit"
 version = "1.1.3"
 description = "A toolkit for calculating the Lorenz Energy Cycle in atmospheric systems"
 readme = "README.md"
