--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ autopep8==2.3.1
 Babel==2.15.0
 cads-api-client==1.1.0
 Cartopy==0.23.0
-cdsapi==0.7.0
+cdsapi>=0.7.0
 certifi==2024.7.4
 cffi==1.16.0
 cfgrib==0.9.13.0
@@ -42,7 +42,7 @@ MarkupSafe==2.1.5
 matplotlib==3.9.1
 mccabe==0.7.0
 MetPy==1.6.2
-multiurl==0.3.1
+multiurl>=0.3.1
 netCDF4==1.7.1.post1
 numpy==2.0.0
 packaging==24.1
